--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,4 +22,4 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: make release
+      run: make release-docker-build GOARCH=amd64 GOOS=linux
