--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,7 +33,8 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ./release/*
+        file: release/auger-*
         tag: ${{ github.ref }}
         overwrite: true
-        body: "This is my release text"
+        body: "multi architecture release"
+        file_glob: true
